# qwen3-tts

./: .gitignore  ARCHITECTURE_COMPARISON.md  CLAUDE.md  LICENSE  MODEL.md  Makefile  PLAN.md  README.md  RECOVERY_STATUS.md  STATUS.md  analyze_codes.py  bench.sh  check_embeddings.py  compare_c_vs_python.py  compare_decoder.py  config.json  debug_audio_quality.py  debug_bf16_all_linear.py  debug_bf16_deterministic.py  debug_bf16_rounding.py  debug_bf16_test.py  debug_sdpa_vs_eager.py  decode_codes_python.py  download_assets.sh  download_model.sh  dump_attn_debug.py  dump_codes_debug.py  dump_cp_codes_debug.py  dump_cp_debug.py  dump_greedy_codes.py  dump_prefill_debug.py  fake_sox.py  fix_config.py  gen_final_attempt.py  gen_official_audio.py  gen_python_official.py  gen_simple.py  gen_with_official_lib.py  generate_python_ref.py  inspect_weights.py  (+52 more)
.claude/: settings.local.json
blog/: cross-model-voice-analysis.md  emotions-on-cloned-voices.md  gpu-backends-metal-cuda-batching.md  optimization-notes.md  voice-cloning-devto.md  voice-cloning-internals.md
docs/: batching.md  building.md  csp-ft-emotion.md  cuda-performance.md  custom-voices.md  emotion-THE-recipe.md  emotion-instruct-control.md  emotion-prompts.md  emotion-research.md  emotion-seeds.md  emotion-vector.md  expressivity-assets.md  expressivity-lora.md  expressivity-recipes.md  expressivity.md  gpu-accel-analysis.md  gpu-accel-status.md  hardware-testing.md  hf-model-card.md  icl-graft-portability.md  markup.md  para-experiments.md  para-target.md  performance.md  pr17-review.md  prosody-map.md  server.md  (+9 more)
(+69 files in other folders)
