[project]
name = "qwen-tts-compare"
version = "0.1.0"
description = "Compare C vs Python speech decoder for Qwen3-TTS"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.50.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "safetensors>=0.4.0",
]

[tool.uv]
dev-dependencies = []
